--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -479,3 +479,9 @@ h6 {
     padding-left: 275px;
 }
 
+.pa3pp {
+    border: 2px solid black;
+    border-radius: 5px;
+    width: 100%;
+    margin-left: 20px;
+}
